add product and image
