# laravel.vpd121.com/app/Http/Controllers/ProductController.php
@@ -1,0 +1,26 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use App\Models\Product;
+use Illuminate\Http\Request;
+
+class ProductController extends Controller
+{
+    /**
+     * @OA\Get(
+     *     tags={"Product"},
+     *     path="/api/product",
+     *     @OA\Response(response="200", description="Get All Products.")
+     * )
+     */
+    public function index()
+    {
+        $products = Product::with('product_images')->with("category")->get();
+
+        return response()->json($products, 200, [
+            'Content-Type' => 'application/json;charset=UTF-8',
+            'Charset' => 'utf-8'
+        ], JSON_UNESCAPED_UNICODE);
+    }
+}
