# laravel.vpd121.com/routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\CategoryController;
+use App\Http\Controllers\ProductController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -25,3 +26,4 @@ Route::get("/category/{id}",[CategoryController::class,'getById']);
 Route::post("/category/edit/{id}",[CategoryController::class,'edit']);
 Route::delete("/category/{id}",[CategoryController::class,'delete']);
 
+Route::get("/product",[ProductController::class,'index']);
